# doctorlink-zk

./: .gitignore  README.md  check_after_verify.py  check_db.py  check_db2.py  check_db3.py  check_deploy.py  check_err_msg.py  check_final_status.py  check_logs.py  check_logs2.py  check_new_deploy.py  check_new_txs.py  check_runtime.py  check_schema.py  check_service.py  check_status.py  check_this_deploy.py  debug_err.py  deploy.json  deploy_now.py  deploy_render.py  fetch_and_check.py  filter_jun28.py  fix_build.py  get_all_logs.py  get_app_logs.py  get_build_logs.py  get_err_logs.py  get_logs.py  get_ops.py  get_recent_logs.py  get_render_logs.py  get_render_logs2.py  get_stream_logs.py  list_txs.py  list_txs2.py  list_txs3.py  log_raw.py  mark_synced.py  (+26 more)
doctorlink-health-services/: .env.example  .sesskey  AGENTS.md  DEMO_SCRIPT.md  DEPLOYMENT.md  HACKATHON_DEMO.md  README.md  ai_service.py  clinic_service.py  config.py  doctorlink-prover  frontend.py  hpcsa_check.py  main.py  models.py  requirements.txt  schemas.py  zk_service.py
doctorlink-health-services/api/: __init__.py
doctorlink-health-services/proof_data/: age_check_proof.json  license_verify_proof.json  vaccine_status_proof.json
doctorlink-health-services/static/: index.html
doctorlink-main/: .gitignore  Cargo.toml  README.md
doctorlink-main/circuits/: Nargo.toml  Prover.toml  Verifier.toml
doctorlink-main/contracts/: Cargo.toml
doctorlink-main/docs/: DEPLOYMENT.md
doctorlink-main/prover/: Cargo.toml
doctorlink-main/prover/src/: main.rs
doctorlink-main/scripts/: demo.sh  deploy.sh  prove.py  (+3 more)
(+10 files in other folders)
